fix: Fixed scrollbar background color

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -63,7 +63,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  background: #fafafa;
+  background: #1a1a1a;
   color: #1a1a1a;
   color-scheme: dark; // Force dark scrollbar and form controls
 }
